# partoguard

./: .gitignore  DATA_LICENSES.md  LICENSE  MODEL_CARD.md  NOTICE  README.md  THIRD_PARTY_NOTICES.md
android/: .gitignore  AGENTS.md  README.md  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
android/llama/: build.gradle.kts  setup-llama.sh
android/llama/src/main/cpp/: CMakeLists.txt  partoguard_jni.cpp
data/: README.md  generate_corpus.py  google_litert_jinja_template.txt  google_litert_metadata.pbtext  manifest.json  stats.json
data/harvested/: manifest.json
data/training_v2/: labels.json
knowledge/: android_local_inference_plan.md  llama_android_integration_plan.md  lora_qlora_reference.md  partoguard_architecture.md  partoguard_build_plan.md  partoguard_corpus_plan.md  partoguard_findings.md  partoguard_full_project_summary.md  partoguard_implementation_plan.md  partoguard_int4_quant_paths.md  partoguard_overview.md  partoguard_remote_gemma_vps.md  partoguard_sources.md  partoguard_training_log.md  partoguard_training_v8_who_plan.md
partoguard/: AGENTS.md  __init__.py  pyproject.toml  pyrightconfig.json
partoguard/cli/: main.py
partoguard/core/: AGENTS.md  corpus_scorer.py  eval.py  pipeline.py
partoguard/core/extraction/: gemma_adapter.py  marks.py
partoguard/core/imaging/: preprocess.py  synthetic.py
partoguard/core/reports/: generator.py
partoguard/core/rules/: engine.py
partoguard/core/schemas/: contracts.py
partoguard/data/synthetic/: labels.json
partoguard/tests/: AGENTS.md  test_corpus_scorer.py  test_eval.py  test_extraction.py  test_gemma_adapter.py  test_integration.py  test_pipeline.py  test_preprocess.py  test_remote_gemma_extractor.py  test_reports.py  test_rules.py  test_scaffold.py  test_synthetic.py
scripts/: AGENTS.md  eval_remote.py  finetune_e2b.py  generate_demo_images.py  generate_training_v2.py  generate_who_training.py  merge_lora.py  vps_startup.sh
(+43 files in other folders)
