[project]
name = "partoguard"
version = "0.1.0"
description = "AI-powered partograph reading assistant for clinical decision support"
requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless>=4.8",
    "Pillow>=10.0",
    "numpy>=1.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
partoguard = "partoguard.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "partoguard",
    "partoguard.cli",
    "partoguard.core",
    "partoguard.core.extraction",
    "partoguard.core.imaging",
    "partoguard.core.reports",
    "partoguard.core.rules",
    "partoguard.core.schemas",
]

[tool.setuptools.package-dir]
partoguard = "."
